slurm-375931.out
--------------------------------------------------------------
Begin Slurm Prologue Sat Jul  6 07:43:28 CDT 2024 1720269808
Job ID:		375931
Username:	l.peiwang
Partition:	tier2_gpu
End Slurm Prologue Sat Jul  6 07:43:28 CDT 2024 1720269808
--------------------------------------------------------------
/home/l.peiwang/liuenv/lib/python3.10/site-packages/nilearn/input_data/__init__.py:23: FutureWarning: The import path 'nilearn.input_data' is deprecated in version 0.9. Importing from 'nilearn.input_data' will be possible at least until release 0.13.0. Please import from 'nilearn.maskers' instead.
  warnings.warn(message, FutureWarning)
Traceback (most recent call last):
  File "/ceph/chpc/home-nfs/l.peiwang/Modality_Comparison_AD/baseline.py", line 3, in <module>
    from main import nested_crossvalidation_multi_kernel, nested_crossvalidation
  File "/ceph/chpc/home-nfs/l.peiwang/Modality_Comparison_AD/main.py", line 61
    3def compute_auprc(y_true, y_pred_probs):
    ^
SyntaxError: invalid decimal literal
--------------------------------------------------------------
Begin Slurm Epilogue Sat Jul  6 07:43:33 CDT 2024 1720269813
Name                : baseline_new
User                : l.peiwang
Partition           : tier2_gpu
Nodes               : gpua402
Cores               : 2
State               : COMPLETED
Submit              : 2024-07-06T07:43:27
Start               : 2024-07-06T07:43:27
End                 : 2024-07-06T07:43:31
Reserved Walltime   : 5-10:50:00
Used Walltime       :   00:00:04
Used CPU Time       :   00:00:01
% User (Computation): 73.47%
% System (I/O)      : 26.53%
Mem Reserved        : 100000M
Max Mem Used        : 0.00  (0.0)
Max Disk Write      : 0.00  (0.0)
Max Disk Read       : 0.00  (0.0)
Max-Mem-Used Node   : gpua402
Max-Disk-Write Node : gpua402
Max-Disk-Read Node  : gpua402
NVIDIA A100-SXM4-40GB
Error: Unable to retrieve job statistics. Return: No data is available.
End Slurm Epilogue Sat Jul  6 07:43:33 CDT 2024 1720269813
--------------------------------------------------------------
